--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 header {
-  background-color: blue;
   height: 110px;
+  text-align: center;
 }
 header img {
   width: 150px;
@@ -23,8 +23,23 @@ nav {
 }
 
 main {
-  background-color: orange;
   height: 400px;
+  text-align: center;
+  padding-top: 80px;
+  padding-left: 240px;
+  padding-right: 240px;
+}
+
+h1 {
+  font-size: 84px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+  font-size: 18px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
