--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 footer {
   background-color: greenyellow;
   height: 100px;
