--- a/style.css
+++ b/style.css
@@ -27,12 +27,17 @@ header img {
 
 nav {
   background-color: rgba(0, 0, 0, 0.322);
-  height: 40px;
+  /* height: 40px; */
   text-align: center;
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
 nav a {
   text-decoration: none;
+  font-size: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 main {
