--- a/style.css
+++ b/style.css
@@ -65,6 +65,13 @@ a {
   font-family: Arial, Helvetica, sans-serif;
 }
 footer {
-  background-color: greenyellow;
-  height: 100px;
+  background-color: rgba(0, 0, 0, 0.719);
+  /* height: 100px; */
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+footer p {
+  font-size: 10px;
+  text-align: center;
+  color: rgba(230, 233, 235, 0.683);
 }
