--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ a {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.maps {
+  padding-bottom: 90px;
+}
+
 footer {
   background-color: rgba(0, 0, 0, 0.719);
   /* height: 100px; */
